Thu Dec  7 21:08:39 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * server.c (check_repository_password): when checking for false
        prefix-matches, look for ':', not '@'.  Duh.

Thu Dec  7 18:44:51 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * options.h.in (CVS_PASSWORDS_CASE_SENSITIVE): replaces
        CVS_PASSWORDS_CASE_INSENSITIVE; passwords are now insensitive by
        default.  Expanded explanatory comment.

        * login.c (get_cvs_password): Use memset(), not bzero().  I
        botched this change earlier.

        * server.c (check_repository_password): no need to check
        xmalloc()'s return value.
        (check_repository_password): check for false prefix-matches (for
        example, username is "theo" and linebuf contains user
        "theocracy").

Thu Dec  7 14:49:16 1995  Jim Meyering  (meyering@comco.com)

	* filesubr.c (isaccessible): Rename from isaccessable.
	Update callers.
	* cvs.h: Update prototype.
	* main.c (main): Update callers.
	* server.c (main): Update callers.

Thu Dec  7 12:50:20 1995  Adam Glass <glass@NetBSD.ORG>

        * cvs.h: "isaccessible" is the correct spelling.
        Also add "const" to second arg to make prototype match
        declaration.

Thu Dec  7 11:06:51 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * client.c, login.c: memset() instead of bzero().

Thu Dec  7 00:08:53 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * server.c (authenticate_connection): document server's side of
        the Authentication Protocol too.

        * client.c (connect_to_pserver): when printing out "unrecognized
        response", also print out the offending response.

        * server.c (check_password): take `repository' arg too now.
        Call check_repository_password() before checking /etc/passwd.
        (check_repository_password): new func.

        * options.h.in (CVS_PASSWORDS_CASE_INSENSITIVE): new define, unset
        by default.
