@@ -3747,28 +3747,6 @@ error ENOMEM Virtual memory exhausted.\n");
 #endif /* 1/0 */
 
 
-#if !defined(CVS_PASSWORDS_CASE_SENSITIVE)
-/* Return value needs freeing. */
-char *
-downcase (string)
-     char *string;
-{
-  char *ret;
-  int i;
-
-  ret = xmalloc (strlen (string) + 1);
-
-  for (i = 0; string[i]; i++)
-    {
-      ret[i] = tolower (string[i]);
-    }
-  ret[i] = '\0';
-  
-  return ret;
-}
-#endif /* ! CVS_PASSWORDS_CASE_SENSITIVE */
-
-
 /* 
  * 0 means no entry found for this user.
  * 1 means entry found and password matches.
@@ -3781,15 +3759,8 @@ check_repository_password (username, password, repository)
   int retval = 0;
   FILE *fp;
   char *filename;
-  char *pwd_lwr;
   char linebuf[MAXLINELEN];
   int found_it = 0, len;
-
-#if !defined(CVS_PASSWORDS_CASE_SENSITIVE)
-  pwd_lwr = downcase (password);
-#else /* CVS_PASSWORDS_CASE_SENSITIVE */
-  pwd_lwr = password;
-#endif /* ! CVS_PASSWORDS_CASE_SENSITIVE */
 
   filename = xmalloc (strlen (repository)
                       + 1
@@ -3831,15 +3802,7 @@ check_repository_password (username, password, repository)
       strtok (linebuf, ":");
       found_password = strtok (NULL, ": \n");
 
-      /* One of the crypt() calls below is redundant if
-         CVS_PASSWORDS_CASE_SENSITIVE is defined, but that's no
-         big deal.  This is client/server anyway, so the speed
-         bottleneck is certainly not going to be in the number of
-         calls to crypt()!  Readability is more important. */
-
-      if ((strcmp (found_password, crypt (pwd_lwr, found_password)) == 0)
-          ||
-          (strcmp (found_password, crypt (password, found_password)) == 0))
+      if (strcmp (found_password, crypt (password, found_password)) == 0)
         retval = 1;
       else
         retval = 2;
@@ -3847,9 +3810,6 @@ check_repository_password (username, password, repository)
   else
     retval = 0;
 
-#if !defined(CVS_PASSWORDS_CASE_SENSITIVE)
-  free (pwd_lwr);
-#endif /* ! CVS_PASSWORDS_CASE_SENSITIVE */
   free (filename);
 
   return retval;
